# data-for-good

./: .Rhistory  .gitignore  ABTesting.ipynb  ANN.Rmd  ANN_Excluding_Gender.Rmd  AdClickLogisticRegression.ipynb  Artificial Neural Network.ipynb  Chunking.ipynb  GAN_Tutorial.ipynb  Gradient Boosting, XGBoost,  Transparency, Explainability,  Accountability .ipynb  Housing Project.ipynb  KNearestNeighborMovieRecommender.ipynb  LinearRegressionMortgage.ipynb  Model Selection Tutorial.ipynb  Model Selection and Regularization.ipynb  Model_selection.Rmd  Model_selection.html  Multiple Testing, P Hacking, Reproducibility Crisis, Publication Bias.ipynb  Multiple Testing, P-Hacking, Reproducibility Crisis, Publication Bias.pptx  NLP For Reddit About Opioid .ipynb  Naive Bayes Heart Disease Prediction.ipynb  PADrugOverdoseOutcomes(Desicion Tree).ipynb  PADrugOverdoseOutcomes.ipynb  PCA.ipynb  Pogo_trip_data_october-2022.xlsx  Pogo_trip_data_october-2024.xlsx  Pogo_trip_data_september-2022.xlsx  Pogo_trip_data_september-2023.xlsx  README.md  RacialandGenderBiasinJusticeSystem.ipynb  SentimentAnalysis.ipynb  SocialNetworkAdClicks.csv  Some Code Examples of NLP.ipynb  The Spring-up and the prosperity of the digital economy.ipynb  Unsupervised Learning Tutorial.ipynb  Unsupervised-Learning.ipynb  Word Embeddings and SVM.ipynb  abc.txt  abcd.txt  check-setup.ipynb  (+32 more)
Project 3 - Bike Friendliness/: Project 3 - Bike Friendliness.ipynb
Project1/: ProjectNew.ipynb  SyntheticTry.csv
data/: FakeGradesDataset.csv  SocialNetworkAdClicks.csv  gene and breast cancer.csv  housestomap.csv  (+2 more)
(+184 files in other folders)
